# website

./: .babelrc  .env.example  .envmaster  .eslintrc  .eslintrc.cjs  .eslintrc.json  .gitignore  .lintstagedrc.json  .nowignore  .npmrc  .oxlintrc.json  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  GlobalStyles.tsx  README.md  a.md  components.json  drizzle-dev.config.ts  drizzle-prod.config.ts  drizzle.config.ts  global.d.ts  middleware.ts  next-env.d.ts  next.config.js  next.config.mjs  next.config.ts  now.json  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  react-table.d.ts  renovate.json  report.20191116.215825.24236.0.001.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  (+5 more)
.github/: dependabot.yml
.husky/: install.mjs  pre-commit
amplify/: team-provider-info.json
data/: announcements.json  clients.json  committee.json  committee_2020.json  constants.json  events.json  events_industry.json  events_social.json  events_workshop.json  faq.json  hackathon2025-agenda.json  hackathon2025-participants.json  hackathon2025-sponsors.json  ignite-mentoring.json  merch.json  partners.json  projects.json  services.json  specialThanks.json  special_thanks.json  sponsors.json
helpers/: analytics.ts  array.ts  dayjs.d.ts  dbConnect.ts  global.ts  messenger.ts  phemeLogin.ts  user.ts
lib/: brandIcons.ts  dbConnect.ts  global.ts  mediaQueries.ts  techlist.ts  theme.ts  types.ts
models/: announcements.ts  (+7 more)
scripts/data_migrations/v2/: .env.example  .gitignore  README.md  etl.ipynb  pyproject.toml
(+781 files in other folders)
